WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36296
[Qt] LayoutTests/fast/canvas/arc360.html failed
https://bugs.webkit.org/show_bug.cgi?id=36296
Summary
[Qt] LayoutTests/fast/canvas/arc360.html failed
qi
Reported
2010-03-18 08:41:02 PDT
QtLauncher fails on the following test case while Safari works. LayoutTests/fast/canvas/arc360.html
Attachments
fix canvas arc function to enable LayoutTests/fast/canvas/arc360.html
(34.07 KB, patch)
2010-03-18 10:48 PDT
,
qi
hausmann
: review+
Details
Formatted Diff
Diff
More description on patch
(34.12 KB, patch)
2010-03-22 08:05 PDT
,
qi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
qi
Comment 1
2010-03-18 10:48:01 PDT
Created
attachment 51047
[details]
fix canvas arc function to enable LayoutTests/fast/canvas/arc360.html At HTLM5 spec (4.8.10.1.8 Complex shapes): context . arc (x, y, radius, startAngle, endAngle, anticlockwise) Adds points to the subpath such that the arc described by the circumference of the circle described by the arguments, starting at the given start angle and ending at the given end angle, going in the given direction, is added to the path, connected to the previous point by a straight line. Throws an INDEX_SIZE_ERRp64 exception if the given radius is negative. arc function should draw a line to previous point, not only the arc.
Simon Hausmann
Comment 2
2010-03-21 15:19:05 PDT
Comment on
attachment 51047
[details]
fix canvas arc function to enable LayoutTests/fast/canvas/arc360.html Please elaborate a little bit more in the ChangeLog when landing.
qi
Comment 3
2010-03-22 05:42:16 PDT
Thanks, I will do that.
Tor Arne Vestbø
Comment 4
2010-03-22 06:36:59 PDT
Bugs relating to the Qt port of WebKit should have the Qt keyword. See
http://trac.webkit.org/wiki/QtWebKitBugs
qi
Comment 5
2010-03-22 08:05:53 PDT
Created
attachment 51287
[details]
More description on patch Based on comments, add more description on ChangeLog.
WebKit Commit Bot
Comment 6
2010-03-22 23:49:05 PDT
Comment on
attachment 51287
[details]
More description on patch Clearing flags on attachment: 51287 Committed
r56382
: <
http://trac.webkit.org/changeset/56382
>
WebKit Commit Bot
Comment 7
2010-03-22 23:49:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug