2010-03-22  Qi Zhang  <qi.2.zhang@nokia.com>

Reviewed by Laszlo Gombos.

        Qt] Fix arc function in canvas
        https://bugs.webkit.org/show_bug.cgi?id=36296

        * platform/qt/Skipped:
        * platform/qt/fast/canvas/arc360-expected.checksum: Added.
        * platform/qt/fast/canvas/arc360-expected.png: Added.
        * platform/qt/fast/canvas/arc360-expected.txt: Added.
2010-03-22  Qi Zhang  <qi.2.zhang@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Fix arc function in canvas
        https://bugs.webkit.org/show_bug.cgi?id=36296

        Based on HTLM5 spec (4.8.10.1.8 Complex shapes), arc function should draw a line to previous point, not only the arc.

        * platform/graphics/qt/PathQt.cpp:
        (WebCore::Path::addArc):

Canonical link: https://commits.webkit.org/47676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56382 268f45cc-cd09-0410-ab3c-d52691b4dbfc